--- a/css/wallpaper.css
+++ b/css/wallpaper.css
@@ -11,5 +11,8 @@
   zoom: 1;
   background-color: #fff;
   background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
   background-position: center 0;
 }
