--- a/mplayer/css/mplayer.css
+++ b/mplayer/css/mplayer.css
@@ -13,7 +13,7 @@
   box-sizing: content-box;
   margin: 0;
   padding: 0;
-  font-family: "黑体", serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 /* line 23, mplayer.less */
 .mp img {
